--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,9 +1,12 @@
 .App {
-
+  /* max-width: 1920px; */
+  /* margin: auto; */
 }
 
-.main {
+.content {
+  max-width: 1240px;
   display: grid;
+  margin: auto;
   grid-template-columns: repeat(2,1fr);
   gap: 40px;
   justify-content: center;
