feat: burger constructor

--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,6 +1,5 @@
 .App {
-  /* max-width: 1920px; */
-  /* margin: auto; */
+  margin: 0;
 }
 
 .content {
@@ -10,4 +9,17 @@
   grid-template-columns: repeat(2,1fr);
   gap: 40px;
   justify-content: center;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  background: #2f2f37;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #8585ad;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #8282da;
 }
