--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -24,6 +24,12 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  max-height: calc(100vh - 246px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .category {
@@ -45,7 +51,7 @@
 
 .cardsContainer {
   padding-left: 16px;
-  padding-right: 16px;
+  padding-right: 8px;
   padding-top: 24px;
   padding-bottom: 40px;
   column-gap: 24px;
