--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,46 +1,49 @@
 .header {
-  display: flex;
-  justify-content: center;
   align-items: center;
   background-color: #1c1c21;
+  display: flex;
+  justify-content: center;
+  max-width: 1920px;
+  width: 100%;
 }
 
 .header__navigation {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
   min-width: 1280px;
-  display: flex;
-  align-items: center;
-  padding: 16px;
-  justify-content: space-between;
 }
 
 .header__list {
   display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
   justify-self: flex-start;
+  line-height: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
   gap: 8px;
-
 }
 
 .menuItem {
   display: flex;
   align-items: center;
   gap: 8px;
+  justify-self: flex-end;
 }
 
 .header__link {
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 16px 20px;
   text-decoration: none;
   color: #8585AD;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
 }
 
 .active {
   color: rgb(255, 255, 255);
+}
+
+.header__logoWrapper {
+  justify-self: center;
+  align-self: center;
 }
