--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -2,16 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 100px;
-  align-items: flex-end;
+  max-width: 600px;
+  width: 100%;
 }
 
 .itemList {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  margin: 0;
   padding: 0;
 }
 
@@ -20,7 +18,19 @@
   justify-content: flex-end;
   align-items: center;
   column-gap: 8px;
-  margin-right: 16px;
+}
+
+.listScroll {
+  display: flex;
+  flex-direction: column;
+  line-height: 0;
+  list-style: none;
+  max-height: calc(100vh - 534px);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding-left: 0;
+  row-gap: 16px;
+  scroll-behavior: smooth;
 }
 
 .order {
@@ -28,7 +38,6 @@
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 52px;
-  margin-top: 40px;
 }
 
 .total {
