--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 1px;
+  min-height: 100vh;
+  min-width: 1280px;
+  overflow: hidden;
+}
