--- a/src/components/ingredient/burger-ingredient.module.css
+++ b/src/components/ingredient/burger-ingredient.module.css
@@ -7,27 +7,12 @@
   justify-content: flex-start;
   max-width: 272px;
   position: relative;
-  cursor: pointer;
+  cursor: grab;
 }
 
 .priceContainer {
   display: flex;
-  /* justify-content: center;
-  gap: 8px; */
 }
-
-/* .price {
-  font-family: 'Iceland', cursive;
-  font-size: 28px;
-  line-height: 24px;
-} */
-
-/* .description {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-} */
 
 .currency {
   width: 24px;
