--- a/src/pages/profile-page/components/edit-data/edit-data.module.css
+++ b/src/pages/profile-page/components/edit-data/edit-data.module.css
@@ -2,5 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  width: 100%;
+  width: 10%;
+}
+
+.buttonsContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
