--- a/src/components/ingredient/burger-ingredient.module.css
+++ b/src/components/ingredient/burger-ingredient.module.css
@@ -23,3 +23,11 @@
   width: 24px;
   height: 24px;
 }
+
+.link {
+  text-decoration: none;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
