--- a/src/components/orders/orders.module.css
+++ b/src/components/orders/orders.module.css
@@ -1,6 +1,7 @@
 .ordersList {
     width: 600px;
     padding: 0;
+    padding-right: 8px;
     margin: 0;
     display: flex;
     flex-direction: column;
