--- a/src/components/orders-stats/orders-stats.module.css
+++ b/src/components/orders-stats/orders-stats.module.css
@@ -1,7 +1,8 @@
 .wrapper {
   width: 580px;
-  /* border: 1px solid red; */
   box-sizing: border-box;
+  /* overflow-y: scroll; */
+  height: calc(100vh - 194px);
 }
 
 .ordersCount {
@@ -14,9 +15,15 @@
 }
 
 .ordersNumbers {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  height: 320px;
+  overflow-y: hidden;
+  overflow-x: auto;
+  display: grid;
+  align-items: flex-start;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(10, 1fr);
+  column-gap: 18px;
+  row-gap: 8px;
 }
 
 .orderNumber {
@@ -24,5 +31,8 @@
 }
 
 .totalCount {
-  text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25), 0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
+  text-shadow: 0px 0px 16px rgba(51, 51, 255, 0.25),
+    0px 0px 8px rgba(51, 51, 255, 0.25), 0px 4px 32px rgba(51, 51, 255, 0.5);
 }
+
+
