--- a/src/components/orders/components/order-card/order-card.module.css
+++ b/src/components/orders/components/order-card/order-card.module.css
@@ -24,14 +24,38 @@
 
 .ingredients {
   display: flex;
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
-.ingredients:first-child {
-  margin-left: 0;
-}
+
 
 .orderInfo {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
+.orderImage {
+  list-style-type: none;
+  margin-left: -15px;
+}
+
+.orderImage:first-child {
+  margin-left: 0;
+}
+
+.hidePic {
+  position: relative;
+	background: #1c1c21;
+  border-radius: 50%;
+}
+
+.hideText {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
