--- a/src/pages/single-order/components/order-position.module.css
+++ b/src/pages/single-order/components/order-position.module.css
@@ -9,3 +9,11 @@
   display: flex;
   align-items: center;
 }
+
+.ingredientList {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
