--- a/src/pages/profile-page/profile-page.module.css
+++ b/src/pages/profile-page/profile-page.module.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: flex;
   gap: 60px;
-  height: 100%;
+  height: calc(100vh - 93px);
   max-width: 1920px;
   padding-left: 336px;
   padding-top: 121px;
